trunk/Archive2/b2/a1db009394cf72/output
main.cpp:4:6: error: member reference base type 'int' is not a structure or union
    t.access();
    ~^~~~~~~
main.cpp:23:5: note: in instantiation of function template specialization 'f<int>' requested here
    f(1);
    ^
1 error generated.
